# MyFirstGameEngine

./: .gitignore  README.md
MyGame/: CMakeLists.txt  README.md  requirements.md
MyGame/.agents/skills/game_development/: SKILL.md
MyGame/Engine/: CMakeLists.txt
MyGame/Engine/include/Engine/: DisplaySyncController.hpp  Engine.hpp  Entity.hpp  FPSCounter.hpp  InputManager.hpp  Log.hpp  Math.hpp  PathService.hpp  ResourceManager.hpp  ResourceTypes.hpp  Scene.hpp  SceneManager.hpp  Transform2D.hpp
MyGame/Engine/include/Engine/ECS/: DrawablePool.hpp  ISystem.hpp  SystemContext.hpp  World.hpp
MyGame/Engine/src/: DisplaySyncController.cpp  Engine.cpp  FPSCounter.cpp  InputManager.cpp  PathService.cpp  SceneManager.cpp
MyGame/Engine/src/ECS/: World.cpp
MyGame/Engine/src/Platform/: PathService_POSIX.cpp  PathService_Win32.cpp
MyGame/Engine/tests/: CMakeLists.txt  test_DisplaySyncController.cpp  test_InputManager.cpp  test_Math.cpp  test_PathService.cpp  test_Transform2D.cpp  test_World.cpp
MyGame/Game/: CMakeLists.txt
MyGame/Game/Assets/Fonts/: README.md
MyGame/Game/include/Game/: GameSettings.hpp  GameplayScene.hpp  MainMenuScene.hpp  MyGameApp.hpp  SceneId.hpp  SettingsManager.hpp
MyGame/Game/include/Game/ECS/: Components.hpp  InputSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  UIAnimationSystem.hpp
MyGame/Game/src/: GameplayScene.cpp  MainMenuScene.cpp  MyGameApp.cpp  SettingsManager.cpp  main.cpp
MyGame/Game/tests/: CMakeLists.txt  test_SettingsManager.cpp
